# SkyrimSE-SimpleTimedBlockAddons

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Scripts/Source/: SimpleTimedBlockAddons_MCM.psc  SimpleTimedBlockAddons_MCM_Menu.psc
src/: Menu.cpp  Menu.h  PCH.h  Papyrus.cpp  Papyrus.h  SKSEMenuFramework.h  Settings.cpp  Settings.h  TimedBlockAddon.cpp  TimedBlockAddon.h  main.cpp
